tests/ui/async-await/feature-async-for-loop.stderr
error[E0658]: `for await` loops are experimental
  --> $DIR/feature-async-for-loop.rs:8:13
   |
LL |         for await _i in core::async_iter::from_iter(0..3) {
   |             ^^^^^
   |
   = note: see issue #118898 <https://github.com/rust-lang/rust/issues/118898> for more information
   = help: add `#![feature(async_for_loop)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `for await` loops are experimental
  --> $DIR/feature-async-for-loop.rs:17:13
   |
LL |         for await _i in core::async_iter::from_iter(0..3) {
   |             ^^^^^
   |
   = note: see issue #118898 <https://github.com/rust-lang/rust/issues/118898> for more information
   = help: add `#![feature(async_for_loop)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
